<resources>
    <string name="app_name">ECommerce-Final</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_cart">Cart</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_search">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_category">Category</string>
    <string name="menu_product">Product</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_help">Help</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Log Out</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_field_required">This field is required</string>

    <string name="please_wait">Please Wait</string>
    <string name="authenticating">Authenticating…</string>
    <string name="connecting">Connecting…</string>
    <string name="download">Download…</string>
    <string name="upload">Upload…</string>

    <string name="header_registerCategory">Register Category</string>
    <string name="header_registerProduct">Register Product</string>
    <string name="header_searchProduct">Search Product</string>

    <string name="tvLogin">Login Now</string>
    <string name="tvRegister">Register Now</string>
    <string name="tvForgotPass">Forgot Password ?</string>
    <string name="tvNewProducts">New Products</string>

    <string name="txtFirstName">First Name</string>
    <string name="txtLastName">Last Name</string>
    <string name="txtEmail">Email</string>
    <string name="txtPassword">Password</string>
    <string name="txtNewPassword">New Password</string>
    <string name="txtConfirmPass">Confirm Password</string>
    <string name="txtContacts">Contact</string>
    <string name="txtBirthday">Select your birthday…</string>
    <string name="txtDescription">Description</string>
    <string name="txtPrice">Price</string>
    <string name="txtName">Name</string>

    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnAddCategory">Add Category</string>
    <string name="btnAddProduct">Add Product</string>
    <string name="btnSelectCategoryImage">Select Image</string>
    <string name="btnAddCart">Add To Cart</string>
    <string name="btnDelete">Delete</string>
    <string name="btnNext">Next</string>
    <string name="btnPrevious">Previous</string>
    <string name="btnClearAll">Clear All Notifications</string>
    <string name="btnChangePassword">Change Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>