<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_home">

    <fragment
            android:id="@+id/nav_home"
            android:name="com.example.ecommerce_final.ui.home.HomeFragment"
            android:label="@string/menu_home"
            tools:layout="@layout/fragment_home"/>

    <action
            android:id="@+id/product_to_registerProduct"
            app:destination="@id/nav_registerProduct" />

    <fragment
            android:id="@+id/nav_category"
            android:name="com.example.ecommerce_final.ui.category.CategoryFragment"
            android:label="@string/menu_category"
            tools:layout="@layout/fragment_category">
        <action
                android:id="@+id/category_to_registerCategory"
                app:destination="@id/nav_registerCategory" />
        <action
                android:id="@+id/category_to_product"
                app:destination="@id/nav_product" />
    </fragment>

    <fragment
            android:id="@+id/nav_registerCategory"
            android:name="com.example.ecommerce_final.ui.category.RegisterCategoryFragment"
            android:label="@string/header_registerCategory"
            tools:layout="@layout/fragment_register_category">

        <action
                android:id="@+id/registerCategory_to_category"
                app:destination="@id/nav_category" />
    </fragment>

    <fragment
            android:id="@+id/nav_product"
            android:name="com.example.ecommerce_final.ui.product.ProductFragment"
            android:label="@string/menu_product"
            tools:layout="@layout/fragment_product">

        <action
                android:id="@+id/product_to_registerProduct"
                app:destination="@id/nav_registerProduct" />

        <action
                android:id="@+id/product_to_productDetails"
                app:destination="@id/nav_productDetails" />

        <action
                android:id="@+id/product_refresh"
                app:destination="@id/nav_product" />
    </fragment>

    <fragment
            android:id="@+id/nav_productDetails"
            android:name="com.example.ecommerce_final.ui.product.ProductDetailsFragment"
            android:label="@string/menu_product"
            tools:layout="@layout/fragment_product_details">

        <action
                android:id="@+id/productDetails_to_cart"
                app:destination="@id/nav_cart" />

    </fragment>

    <fragment
            android:id="@+id/nav_registerProduct"
            android:name="com.example.ecommerce_final.ui.product.RegisterProductFragment"
            android:label="@string/header_registerProduct"
            tools:layout="@layout/fragment_register_product">

        <action
                android:id="@+id/registerProduct_to_product"
                app:destination="@id/nav_product" />
    </fragment>

    <fragment
            android:id="@+id/nav_search"
            android:name="com.example.ecommerce_final.ui.SearchFragment"
            android:label="@string/header_searchProduct"
            tools:layout="@layout/fragment_search">

        <action
                android:id="@+id/main_to_search"
                app:destination="@id/nav_search" />

        <action
                android:id="@+id/product_to_registerProduct"
                app:destination="@id/nav_registerProduct" />
    </fragment>

    <fragment
            android:id="@+id/nav_cart"
            android:name="com.example.ecommerce_final.ui.cart.CartFragment"
            android:label="@string/menu_cart"
            tools:layout="@layout/fragment_cart">

    </fragment>

    <fragment
            android:id="@+id/nav_notifications"
            android:name="com.example.ecommerce_final.ui.notification.NotificationFragment"
            android:label="@string/menu_notifications"
            tools:layout="@layout/fragment_notification">

    </fragment>

    <fragment
            android:id="@+id/nav_profile"
            android:name="com.example.ecommerce_final.ui.ProfileFragment"
            android:label="@string/menu_profile"
            tools:layout="@layout/fragment_profile">

    </fragment>


</navigation>