<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:colorBackground"
            android:elevation="5dp"
            tools:context=".ui.login.RegisterFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="244dp">

        <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/imgProfile"
                android:layout_width="wrap_content"
                android:layout_height="177dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:src="@drawable/user"
                app:civ_border="true"
                app:civ_border_color="@color/white"
                app:civ_border_width="8dp"
                app:civ_shadow="true"
                app:civ_shadow_color="@color/white"
                app:civ_shadow_radius="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewNameapp"/>

        <TextView
                android:id="@+id/viewNameapp"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/app_name"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" android:textAlignment="center"/>

        <EditText
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:focusedByDefault="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/txtFirstName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgProfile"/>

        <EditText
                android:id="@+id/txtLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/txtLastName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtName"/>

        <EditText
                android:id="@+id/txtEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/txtEmail"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLastName"/>

        <EditText
                android:id="@+id/txtPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/txtPassword"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail"/>

        <EditText
                android:id="@+id/txtConfirmPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/txtConfirmPass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtPassword"/>

        <EditText
                android:id="@+id/txtContact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/txtContacts"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/spnRol"/>

        <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnRegister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtBirthday"/>
        <TextView
                android:id="@+id/tv_password_resgister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tvForgotPass"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="88dp"/>
        <TextView
                android:id="@+id/tv_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvLogin"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister" android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/tv_password_resgister" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.226"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/spnRol"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtConfirmPass"
        />
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:ems="10"
                android:id="@+id/txtBirthday"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/txtContact"
                android:layout_marginEnd="8dp" android:layout_marginStart="8dp" android:hint="@string/txtBirthday"
                android:textSize="18sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>