<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <EditText
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/txtDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                android:layout_marginTop="8dp"/>
        <Button
                android:text="@string/btnSelectCategoryImage"
                android:layout_width="395dp"
                android:layout_height="wrap_content" android:id="@+id/btnSelectProductImage"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <ImageSwitcher
                android:layout_width="0dp"
                android:layout_height="200dp" tools:src="@drawable/ic_menu_camera" android:id="@+id/imgSelectProduct"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/btnSelectProductImage"/>
        <Button
                android:text="@string/btnAddProduct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnAddProduct"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/spnCategory"
                app:layout_constraintVertical_bias="0.594"/>
        <EditText
                android:layout_width="395dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/txtPrice"
                android:hint="@string/txtPrice"
                app:layout_constraintTop_toBottomOf="@+id/txtDescription" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0.0"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/spnCategory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/txtPrice"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="395dp"
                android:layout_height="40dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imgSelectProduct"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/linearLayout">
            <Button
                    android:text="@string/btnPrevious"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btnPrevious" android:layout_weight="1"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView" android:layout_weight="1"/>
            <Button
                    android:text="@string/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btnDeleteImage" android:layout_weight="1"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="1"/>
            <Button
                    android:text="@string/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btnNext" android:layout_weight="1"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>