<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:elevation="10dp"
                                                   android:background="?android:colorBackground"
                                                   tools:context=".ui.login.ForgotPasswordFragment">


    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtEmailForgot"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:hint="@string/txtEmail"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tvChangePassword"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtNewPass"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtEmailForgot"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:hint="@string/txtNewPassword"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/btnChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnChangePassword"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txtNewPass"
            app:layout_constraintHorizontal_bias="0.497"/>
    <TextView
            android:text="@string/btnChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tvChangePassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:textSize="24sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>