<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.category.RegisterCategoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="false"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/txtName"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/btnAddCategory"/>
        <Button
                android:text="@string/btnSelectCategoryImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/btnSelectCategoryImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="88dp"
                app:layout_constraintBottom_toTopOf="@+id/txtName" android:layout_marginTop="69dp"
                app:layout_constraintTop_toBottomOf="@+id/imgSelectCategory" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
        <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp" app:srcCompat="@drawable/ic_menu_camera" android:id="@+id/imgSelectCategory"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="56dp" app:layout_constraintHorizontal_bias="0.498"
                android:layout_marginStart="50dp" android:layout_marginEnd="50dp"/>
        <Button
                android:text="@string/btnAddCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnAddCategory"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>